@@ -504,13 +504,27 @@ TCanvas* GledGUI::NewCanvas(const Text_t* name, const Text_t* title,
 			    int w, int h, int npx, int npy)
 {
   // This does not seem to be working perfectly.
-  // Suspect this should really be called via timer and
-  // an additional method that would make the canvas, put it in some
-  // location and signal a condition that would return here.
+  //
+  // Make a fltk wrapper for TCanvas?
 
-  TCanvas* c = dynamic_cast<TCanvas*>((TObject*)
-     gROOT->ProcessLineFast(GForm("new TCanvas(\"%s\", \"%s\", %d, %d); ",
-                                  name, title, w, h)));
+  TCanvas* c = 0;
+
+  if(GThread::Self() == mRintThread) {
+    c = new TCanvas(name, title, w, h);
+    printf ("GledGUI::NewCanvas XXXXX %p\n", c);
+  } else {
+    printf("This locks up rint thread -- investigate.\n");
+    GCondition cnd;
+    cnd.Lock();
+    TTimer t(GForm("*((TCanvas**)0x%lx) = new TCanvas(\"%s\", \"%s\", %d, %d); "
+                   "((GCondition*)0x%lx)->Signal();",
+                   &c, name, title, w, h, &c), 0);
+    t.Start(0, kTRUE);
+    mRintThread->Kill(GThread::SigALRM);
+    printf("GledGUI::NewCanvas YYYYY waiting ...\n");
+    cnd.TimedWaitMS(1000);
+    printf("GledGUI::NewCanvas YYYYY %p\n", c);
+  }
 
   if(c && (npx>1 || npy>1)) {
     c->Divide(npx,npy);
